fixed no results in search, made more visible

--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -130,9 +130,3 @@ textarea.parsley-error {
     }
   }
 }
-
-.noSearch {
-  color: #f6f6f6;
-  text-align: center;
-  background-color: #e3342f;
-}
